<resources>
    <string name="app_name">Movie Magic</string>
    <string name="movie_project">Movie Project</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="confirm_hint_password">Confirm Password</string>
    <string name="button_next">Next</string>
    <string name="button_login">Login</string>
    <string name="button_continue">Continue</string>
    <string name="button_signup">Sign Up</string>
    <string name="google_signup_button">Sign Up w/ Google</string>
    <string name="dont_have_an_account">Don\'t have an Account?</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="holder_username">holder username</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_in_with_google">Sign in With Google</string>
    <string name="bio">Bio</string>
    <string name="new_york_usa">New York, USA</string>
    <string name="update_info">Update Info</string>
    <string name="info_email_com">info@Email.com</string>
    <string name="email_item">Email</string>
    <string name="begin_movie_search">Begin Movie Search.</string>

    <!-- Movie Log -->
    <string name="movie_log">Movie Log</string>
    <string name="movie_log_title">My Movies</string>
    <string name="movie_log_hint_movie">Movie</string>
    <string name="movie_log_hint_year">Year</string>
    <string name="movie_log_hint_date_watched">Date Watched</string>
    <string name="movie_log_hint_directed_by">Directed By</string>
    <string name="movie_log_hint_starring">Starring</string>
    <string name="movie_log_hint_notes">Notes</string>
    <string name="movie_log_in_theater">In Theater</string>
    <string name="movie_log_at_home">At Home</string>
    <string name="movie_log_first_watch">First Watch</string>
    <string name="movie_log_rewatch">Rewatch</string>
    <string name="movie_log_alone">Alone</string>
    <string name="movie_log_with">With</string>
    <string name="movie_log_save">Save</string>
    <string name="movie_log_rating">Rating</string>
    <string name="movie_log_where">Where</string>
    <string name="movie_log_watch_type">Watch Type</string>
    <string name="movie_log_who">Who</string>
    <string name="movie_log_notes_section">Notes</string>
    <string name="movie_log_empty">No movies logged yet. Tap + to add one!</string>
</resources>
