<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:drawable="@drawable/icon"
        android:icon="@drawable/selector_home"
        android:title="@string/home" />


    <item
        android:id="@+id/search_Fragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:drawable="@drawable/icon"
        android:icon="@drawable/selector_search"
        android:title="@string/search" />

    <item
        android:id="@+id/favoritesFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:icon="@drawable/selector_favorite"
        android:drawable="@drawable/icon"
        android:title="@string/favorite" />

    <item
        android:id="@+id/movieLogFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:icon="@drawable/selector_book"
        android:drawable="@drawable/icon"
        android:title="@string/movie_log" />

</menu>
