<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="406dp"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="@dimen/activity_sign_layout_padding"
        android:paddingTop="@dimen/activity_sign_layout_padding_top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_150"
            android:layout_height="@dimen/dp_150"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/activity_login1_material_layout_margin_bottom"
            android:src="@drawable/movie_majic_app_logo"  />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/email"
            app:helperText=""
            app:helperTextTextColor="@color/alert_red">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/hint_password"
            android:inputType="text"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorEnabled="true"
            app:helperText=""
            app:helperTextTextColor="@color/alert_red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Confirm_password_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/confirm_hint_password"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorEnabled="true"
            app:helperText=""
            app:helperTextTextColor="@color/alert_red"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="8" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/iris"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/button_signup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_signup_button"
            app:icon="@drawable/google_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stateListAnimator="@animator/mtrl_btn_unelevated_state_list_anim"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"
            android:textColor="@color/iris"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/sign_in_with_google"
            app:iconGravity="textStart"
            app:iconTint="@null"
            app:strokeWidth="@dimen/activity_sign_material_button_layout_stroke_width"
            app:strokeColor="@color/iris"
            />

    </LinearLayout>

    <Button
        android:id="@+id/textButton"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/already_have_an_account_login"
        android:textAlignment="center"
        android:textColor="@color/iris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>