<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/light_white"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dp_1">

                <ImageView
                    android:layout_width="@dimen/image_layout_width_margin"
                    android:layout_height="@dimen/image_layout_height_margin"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_person_2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:text="@string/bio"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/sp_16"
                    android:textStyle="bold|normal" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="1dp">

                <ImageView
                    android:layout_width="@dimen/image_layout_width_margin"
                    android:layout_height="@dimen/image_layout_height_margin"
                    android:padding="@dimen/image_padding"
                    android:src="@drawable/ic_add_circle" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dp_5"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/update_info"
                    android:textColor="@color/iris"
                    android:textSize="@dimen/image_text_size"
                    android:textStyle="bold|normal" />

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:padding="@dimen/location_image_padding"
                android:layout_marginStart="@dimen/location_image_margin_start"
                android:src="@drawable/ic_person_location"
                android:layout_width="@dimen/location_image_width"
                android:layout_height="@dimen/location_image_height"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/new_york_usa"
                    android:fontFamily="@font/montserrat_bold"
                    android:textSize="@dimen/location_image_text_size"
                    android:textColor="@color/dark_grey"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>